no internet send message bug fix, works last not showing bug fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,3 +121,24 @@ body {
     margin-right: calc((100% - 1200px) / 2);
   }
 }
+
+@keyframes vibrate {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    transform: translate(2px, 2px);
+  }
+  80% {
+    transform: translate(2px, -2px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
